--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
                         <a routerLink="about" class="navLink">Біо</a>
                     </li>
                     <li routerLinkActive="active" (click)="setActive($event)">
-                        <a routerLink="news" class="navLink">Новини</a>
+                        <a routerLink="news" class="navLink">Події</a>
                     </li>
                     <li routerLinkActive="active" (click)="setActive($event)">
                         <a routerLink="works" class="navLink">Твори</a>
