--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,9 +6,9 @@
         <div id="footerMenu">
             <ul>
                 <li routerLinkActive="active"><a routerLink="about">Біо</a></li>
-                <li routerLinkActive="active"><a routerLink="portfolio">Новини</a></li>
-                <li routerLinkActive="active"><a routerLink="blog">Твори</a></li>
-                <li routerLinkActive="active"><a routerLink="blog">Проєкти</a></li>
+                <li routerLinkActive="active"><a routerLink="news">Події</a></li>
+                <li routerLinkActive="active"><a routerLink="works">Твори</a></li>
+                <li routerLinkActive="active"><a routerLink="projects">Проєкти</a></li>
                 <li routerLinkActive="active"><a routerLink="contact">Контакт</a></li>
             </ul>
         </div>
@@ -17,7 +17,7 @@
             <div><a href="https://soundcloud.com/bohdansehin"><img src="../../../assets/soundcloud-logo.png" alt="" srcset=""></a></div>
             <div><a href="https://www.youtube.com/channel/UCK8ZrQlSd0ZvTHsUJpRAX7Q"><img src="../../../assets/youtube.png" alt="" srcset=""></a></div>
         </div>
-        <div id="footerCopyright">© 2019 Богдан Сегін. Всі права захищені.</div>
+        <div id="footerCopyright">© <span>{{date | date: 'y'}}</span> Богдан Сегін. Всі права захищені.</div>
     </div>
 </footer>
 
