--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -1,8 +1,30 @@
 #news {
-    width: 100vw;
-    height: 100vh;
-    background-image: url('https://firebasestorage.googleapis.com/v0/b/bohdansehinwebsite.appspot.com/o/testBack.jpg?alt=media&token=88298e38-7adc-4c39-b86d-372035a67a63');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    #newsBackground {
+        background-image: url('../../../assets/newsBack.JPG');
+    }
+    #newsInner {
+        background-color: white;
+        padding: 20px;
+        .newsOne {
+            .newsOneTitle {
+                color: brown;
+            }
+            .newsOneInfo {
+                .newsOneImage {
+                    width: 200px;
+                    float: left;
+                    margin: 0 15px 15px 0;
+                }
+            }
+            .newsOneFooter {
+                a {
+                    color: brown;
+                }
+                a:hover {
+                    color: white;
+                    background-color: black;
+                }
+            }
+        }
+    }
 }
